syntax = "proto3";

package ddex.v1beta2;

import "core/v1beta1/types.proto";
import "ddex/v1beta2/ern.proto";

option go_package = "github.com/AudiusProject/audiusd/pkg/api/ddex/v1beta2";

// Service for processing DDEX Electronic Release Notifications
service DDEXService {
  rpc SubmitERN(SubmitERNRequest) returns (SubmitERNResponse);
  rpc GetERN(GetERNRequest) returns (GetERNResponse);
}

message SubmitERNRequest {
  string signature = 1;
  core.v1beta1.Envelope envelope = 2;
}

message SubmitERNResponse {
  string address = 1;
}

message GetERNRequest {
  string address = 1;
}

message GetERNResponse {
  NewReleaseMessage ern = 1;
}
